<resources>
    <string name="app_name">GoodTaxi</string>
    <string name="Email">ivanov@mail.com</string>
    <string name="Password">***********</string>
    <string name="Button_Text">SING IN</string>
    <string name="create_a_new_account">Create a new account ?</string>
    <string name="remember_my">Remember my</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="Lock">TODO</string>
    <string name="your_e_mail">your e-mail</string>
    <string name="your_password">your password</string>
    <string name="repeat_password">repeat password</string>
    <string name="i_accept_the_terms_of_the_agreement">I accept the terms of the agreement</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="ivanov_ivan">Ivanov Ivan</string>
    <string name="novosibirsk">Novosibirsk</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
</resources>